LPS-99003 portal-search-elasticsearch7-api: buildlang
https://issues.liferay.com/browse/LPS-99003

--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ar.properties
@@ -18,7 +18,7 @@ cluster-name=اسم المجموعة
 cluster-name-help=اسم المجموعة المطلوب الانضمام إليها. يجب أن يتطابق الاسم مع المجموعة البعيدة عند تعيين "وضع التشغيل" إلى بعيد.
 discovery-zen-ping-unicast-hosts-port=منفذ الاستضافات أحادية البث لـ Zen Discovery
 discovery-zen-ping-unicast-hosts-port-help=نطاق المنافذ المطلوب استخدامها عند إنشاء قيمة discovery.zen.ping.unicast.hosts. يمكن لعقد "البحث المرن" المتعددة على مجموعة من المنافذ أن تعمل بمثابة أجهزة التوجيه للقيل والقال على الكمبيوتر نفسه.
-elasticsearch6-configuration-name=Elasticsearch 6
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=أصل السماح لـ Http CORS
 http-cors-allow-origin-help=أصول السماح عندما يتم تمكين HTTP CORS.
 http-cors-configurations=تكوينات Http CORS
