--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_cs.properties
@@ -18,7 +18,7 @@ cluster-name=Název clusteru (Automatic Translation)
 cluster-name-help=Název clusteru připojit. Název by měl odpovídat vzdálený cluster, pokud je nastaven režim provozu do vzdálené. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen objevu jednosměrového vysílání hostitelů Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Rozsah portů, které chcete použít při vytváření hodnota discovery.zen.ping.unicast.hosts. Více uzlů Elasticsearch na řadu portů může fungovat jako drby směrovače na stejném počítači. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS umožňují původu (Automatic Translation)
 http-cors-allow-origin-help=Počátky umožníte-li HTTP CORS je povolena. (Automatic Translation)
 http-cors-configurations=Konfigurace HTTP CORS (Automatic Translation)
