--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_el.properties
@@ -18,7 +18,7 @@ cluster-name=Όνομα συμπλέγματος (Automatic Translation)
 cluster-name-help=Το όνομα του συμπλέγματος να ενταχθούν. Το όνομα πρέπει να ταιριάζει με το απομακρυσμένο σύμπλεγμα όταν η λειτουργία έχει οριστεί σε απομακρυσμένη. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen ανακάλυψη Unicast φιλοξενεί λιμάνι (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Εύρος θυρών που θα χρησιμοποιήσετε κατά τη δημιουργία της αξίας discovery.zen.ping.unicast.hosts. Πολλαπλές Elasticsearch κόμβων σε μια περιοχή θυρών μπορεί να λειτουργήσουν ως δρομολογητές κουτσομπολιά στον ίδιο υπολογιστή. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS επιτρέπουν καταγωγής (Automatic Translation)
 http-cors-allow-origin-help=Προέλευση να επιτρέψει όταν HTTP CORS είναι ενεργοποιημένη. (Automatic Translation)
 http-cors-configurations=Http CORS διαμορφώσεις (Automatic Translation)
