--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_hi_IN.properties
@@ -18,7 +18,7 @@ cluster-name=क्लस्टर नाम (Automatic Translation)
 cluster-name-help=क्लस्टर में शामिल होने के लिए का नाम है। कार्रवाई मोड करने के लिए दूरस्थ सेट है, जब दूरस्थ क्लस्टर नाम से मेल खाना चाहिए। (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=ज़ेन डिस्कवरी यूनिकास्ट मेजबान बंदरगाह (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Discovery.zen.ping.unicast.hosts मान बनाने के लिए जब का उपयोग करने के लिए पोर्ट की श्रेणी। एकाधिक Elasticsearch नोड्स पोर्ट की एक श्रेणी पर गपशप रूटर्स एक ही कंप्यूटर पर के रूप में कार्य कर सकते हैं। (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS मूल अनुमति दें (Automatic Translation)
 http-cors-allow-origin-help=मूल HTTP CORS सक्षम किया गया है जब अनुमति देने के लिए। (Automatic Translation)
 http-cors-configurations=Http CORS कॉंफ़िगरेशन (Automatic Translation)
