--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_it.properties
@@ -18,7 +18,7 @@ cluster-name=Nome Cluster
 cluster-name-help=Il nome del cluster di aderire. Il nome deve corrispondere il cluster remoto quando la modalità di funzionamento è impostata a remoto. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen Discovery Unicast host Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Intervallo di porte da utilizzare quando il valore di discovery.zen.ping.unicast.hosts della costruzione. Più Elasticsearch nodi su un intervallo di porte possono fungere da router di gossip sullo stesso computer. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS permettono di origine (Automatic Translation)
 http-cors-allow-origin-help=Origini per consentire quando è abilitato HTTP CORS. (Automatic Translation)
 http-cors-configurations=Configurazioni di HTTP CORS (Automatic Translation)
