--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_iw.properties
@@ -18,7 +18,7 @@ cluster-name=שם האשכול
 cluster-name-help=שם האשכול להצטרפות. השם צריך להתאים לאשכול המרוחק כאשר מצב פעולה מוגדר כמרחוק.
 discovery-zen-ping-unicast-hosts-port=גילוי זן יציאת יוניקסט מארחים
 discovery-zen-ping-unicast-hosts-port-help=רצף היציאות לשימוש בעת בניית הערך discovery.zen.ping.unicast.hosts. צמתי Elasticsearch מרובים, ברצף של יציאות, יכולים לפעול כנתבי רכילות באותו המחשב.
-elasticsearch6-configuration-name=Elasticsearch 6
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS אפשר מקור
 http-cors-allow-origin-help=מקורות שניתן לאפשר כאשר HTTP CORS מופעל.
 http-cors-configurations=תצורות http CORS
