--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_lt.properties
@@ -18,7 +18,7 @@ cluster-name=Grupės pavadinimas (Automatic Translation)
 cluster-name-help=Prisijungti prie grupės pavadinimas. Pavadinimas turėtų atitikti nuotolinio grupės, kai operacijos režimas nustatytas į nuotolinio. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen atradimas Unicast šeimininkai uosto (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Įvairūs uostų naudoti statant discovery.zen.ping.unicast.hosts vertė. Keli Elasticsearch mazgų įvairius prievadus gali veikti kaip gandai maršrutizatoriai ne tame pačiame kompiuteryje. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http karves leisti kilmės (Automatic Translation)
 http-cors-allow-origin-help=Ištakos, kad Įgalinus HTTP karves. (Automatic Translation)
 http-cors-configurations=Http karves konfigūracijų (Automatic Translation)
