--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_pt_PT.properties
@@ -18,7 +18,7 @@ cluster-name=Cluster Name (Automatic Copy)
 cluster-name-help=O nome do cluster para se juntar. O nome deve coincidir com o cluster remoto quando o modo de operação é definido para remoto. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen Discovery Unicast Hosts Port (Automatic Copy)
 discovery-zen-ping-unicast-hosts-port-help=Intervalo de portas para usar ao criar o valor de discovery.zen.ping.unicast.hosts. Vários nós de Elasticsearch em um intervalo de portas podem funcionar como roteadores de fofoca no mesmo computador. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch-6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS Allow Origin (Automatic Copy)
 http-cors-allow-origin-help=Origens para permitir ao CORS HTTP está habilitado. (Automatic Translation)
 http-cors-configurations=Http CORS Configurations (Automatic Copy)
