--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ru.properties
@@ -18,7 +18,7 @@ cluster-name=Имя кластера (Automatic Translation)
 cluster-name-help=Имя кластера, чтобы присоединиться. Имя должно соответствовать удаленного кластера, когда режим работы установлен на удаленный. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen обнаружения одноадресной хостов порт (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Диапазон портов для использования при построении discovery.zen.ping.unicast.hosts значение. Несколько узлов Elasticsearch диапазон портов может выступать как сплетни маршрутизаторы на одном компьютере. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=HTTP CORS позволяют происхождения (Automatic Translation)
 http-cors-allow-origin-help=Истоки разрешить когда HTTP CORS включен. (Automatic Translation)
 http-cors-configurations=Конфигурации HTTP CORS (Automatic Translation)
