--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_sl.properties
@@ -18,7 +18,7 @@ cluster-name=Ime gruče (Automatic Translation)
 cluster-name-help=Ime skupine, da se pridružijo. Ime se mora ujemati oddaljene gruče, ko način operacije nastavljena na daljavo. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen odkritje enovrstnega oddajanja gostitelji vrat (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Obseg pristanišč za uporabo pri gradnji discovery.zen.ping.unicast.hosts vrednost. Več Elasticsearch vozlišči na obsegu vrat lahko deluje kot gossip usmerjevalniki v istem računalniku. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http kap omogočajo izvora (Automatic Translation)
 http-cors-allow-origin-help=Izvor omogočiti, ko je omogočen HTTP kap. (Automatic Translation)
 http-cors-configurations=Http kap konfiguracije (Automatic Translation)
