--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_tr.properties
@@ -18,7 +18,7 @@ cluster-name=Küme adı (Automatic Translation)
 cluster-name-help=Katılmak küme adı. Çalışma modu uzak ayarlandığında uzak küme adla eşleşmesi gerekir. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen bulma tek noktaya yayın ana bilgisayar bağlantı noktası (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Discovery.zen.ping.unicast.hosts değeri oluştururken kullanılacak bağlantı noktası aralığını. Birden çok bağlantı noktası aralığını Elasticsearch düğümlerinde dedikodu yönlendiriciler aynı bilgisayardaki kullanılabilir. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS izin kökeni (Automatic Translation)
 http-cors-allow-origin-help=Kökenleri HTTP CORS etkinleştirildiğinde sağlayacak. (Automatic Translation)
 http-cors-configurations=Http CORS yapılandırmaları (Automatic Translation)
