--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_uk.properties
@@ -18,7 +18,7 @@ cluster-name=Кластер ім'я (Automatic Translation)
 cluster-name-help=Ім'я кластера приєднатися. Ім'я має відповідати віддаленого кластера, коли режим роботи встановлено до віддаленого. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Дзен Discovery одноадресний хостів порт (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Діапазон портів для використання при створенні discovery.zen.ping.unicast.hosts значення. Декількох Elasticsearch вузлів на діапазон портів, може виступати в якості плітки маршрутизаторів на одному комп'ютері. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS дозволяє походження (Automatic Translation)
 http-cors-allow-origin-help=Витоки дозволити увімкненим HTTP CORS. (Automatic Translation)
 http-cors-configurations=Http CORS конфігурацій (Automatic Translation)
