--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_vi.properties
@@ -18,7 +18,7 @@ cluster-name=Cụm tên (Automatic Translation)
 cluster-name-help=Tên cụm để tham gia. Tên phải phù hợp với cụm từ xa khi chế độ hoạt động được thiết lập từ xa đến. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen Discovery Unicast máy chủ cổng (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Phạm vi của cổng để sử dụng khi xây dựng giá trị discovery.zen.ping.unicast.hosts. Nhiều Elasticsearch nút trên một loạt các cổng có thể hoạt động như bộ định tuyến gossip tại cùng một máy tính. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=CLYDE http cho phép nguồn gốc (Automatic Translation)
 http-cors-allow-origin-help=Nguồn gốc cho phép khi HTTP CLYDE được kích hoạt. (Automatic Translation)
 http-cors-configurations=Cấu hình http CLYDE (Automatic Translation)
