--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_zh_CN.properties
@@ -18,7 +18,7 @@ cluster-name=群集名称
 cluster-name-help=要加入的群集的名称。当"操作模式"为远程时，名称应与远程群集匹配。
 discovery-zen-ping-unicast-hosts-port=Zen 发现单播主机端口
 discovery-zen-ping-unicast-hosts-port-help=构建 discovery.zen.ping.unicast.hosts 值时使用的端口范围。一系列端口上的多个 Elasticsearch 节点可以在同一台计算机上作为 gossip 路由器。
-elasticsearch6-configuration-name=Elasticsearch 6
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS 允许源
 http-cors-allow-origin-help=启用 HTTP CORS 时允许的源。
 http-cors-configurations=Http CORS 配置
