--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_zh_TW.properties
@@ -18,7 +18,7 @@ cluster-name=群集名稱 (Automatic Translation)
 cluster-name-help=要加入的群集的名稱。名稱應匹配遠端群集操作模式設置為遠端時。 (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=禪宗發現單播主機埠 (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=要生成的 discovery.zen.ping.unicast.hosts 值時使用的埠範圍。在一系列埠上的多個 Elasticsearch-節點可以作為八卦路由器在同一台電腦。 (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS 允許源 (Automatic Translation)
 http-cors-allow-origin-help=允許啟用 HTTP CORS 的起源。 (Automatic Translation)
 http-cors-configurations=Http CORS 配置 (Automatic Translation)
