--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_bg.properties
@@ -18,7 +18,7 @@ cluster-name=Име на клъстер (Automatic Translation)
 cluster-name-help=Името на клъстера да се присъединят. Името трябва да съответства отдалечен клъстера когато режим на работа е настроен към далечен. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Дзен откритие едноадресни тълпа пристанище (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Диапазон от портове да се използват при изграждане на discovery.zen.ping.unicast.hosts стойност. Множество Elasticsearch възли от диапазон от портове може да действа като Клюки рутери на същия компютър. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http кора позволяват произход (Automatic Translation)
 http-cors-allow-origin-help=Произход да позволи когато HTTP кора е разрешено. (Automatic Translation)
 http-cors-configurations=Http кора конфигурации (Automatic Translation)
