--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_et.properties
@@ -18,7 +18,7 @@ cluster-name=Klastri nimi (Automatic Translation)
 cluster-name-help=Liituda klastri nimi. Nimi peaks vastama serveri klaster määramisel töörežiimi-remote. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen Discovery ainusaate Hosts Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Mitut porti kasutada, kui hoone discovery.zen.ping.unicast.hosts väärtus. Mitu Elasticsearch sõlmed mitut porti saab tegutseda gossip ruuterid on sama arvuti. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS lubada päritolu (Automatic Translation)
 http-cors-allow-origin-help=Origins et võimaldada HTTP CORS lubamisel. (Automatic Translation)
 http-cors-configurations=Http CORS koosseisud (Automatic Translation)
