--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_fa.properties
@@ -18,7 +18,7 @@ cluster-name=نام خوشه (Automatic Translation)
 cluster-name-help=نام خوشه برای پیوستن به. وقتی حالت عملیات تنظیم از راه دور به نام خوشه دور مطابقت می باید. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=ذن کشف Unicast میزبان بندر (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=انواع پورت به استفاده از هنگامی که ساختمان ارزش discovery.zen.ping.unicast.hosts. چند گره های Elasticsearch در محدوده بنادر به عنوان روتر شایعات بی اساس در همین کامپیوتر عمل می کنند. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS اجازه منشاء (Automatic Translation)
 http-cors-allow-origin-help=ریشه ها اجازه می دهد تا زمانی که HTTP CORS فعال است. (Automatic Translation)
 http-cors-configurations=تنظیمات http CORS (Automatic Translation)
