--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_hu.properties
@@ -18,7 +18,7 @@ cluster-name=Fürt neve
 cluster-name-help=A csatlakoztatni kívánt fürt neve. A névnek meg kell egyeznie a távoli fürttel, amikor a működési mód távoliként van beállítva.
 discovery-zen-ping-unicast-hosts-port=Zen Discovery Unicast állomás portja
 discovery-zen-ping-unicast-hosts-port-help=A discovery.zen.ping.unicast.hosts érték összeállítása során használt portok terjedelme. A portok közül több Elasticsearch csomópont működhet gossip útválasztóként egy adott számítógép esetében.
-elasticsearch6-configuration-name=Elasticsearch 6
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS eredet engedélyezése
 http-cors-allow-origin-help=Az engedélyezni kívánt eredetik engedélyezett HTTP CORS esetén.
 http-cors-configurations=Http CORS konfigurációk
