--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_in.properties
@@ -18,7 +18,7 @@ cluster-name=Nama cluster (Automatic Translation)
 cluster-name-help=Nama cluster untuk bergabung. Nama harus sesuai cluster jauh ketika operasi Mode diset ke remote. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen penemuan Unicast host Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Julat Port untuk digunakan ketika membangun nilai discovery.zen.ping.unicast.hosts. Beberapa node Elasticsearch di berbagai pelabuhan dapat bertindak sebagai router gosip di komputer yang sama. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS memungkinkan asal (Automatic Translation)
 http-cors-allow-origin-help=Asal-usul agar ketika HTTP CORS diaktifkan. (Automatic Translation)
 http-cors-configurations=Http CORS konfigurasi (Automatic Translation)
