--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ko.properties
@@ -18,7 +18,7 @@ cluster-name=클러스터 이름 (Automatic Translation)
 cluster-name-help=가입 하려면 클러스터의 이름입니다. 이름은 동작 모드를 원격 설정 원격 클러스터를 일치 해야 합니다. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=선 검색 유니캐스트 호스트 포트 (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Discovery.zen.ping.unicast.hosts 값을 작성할 때 사용 하는 포트의 범위. 다양 한 포트에 여러 개의 Elasticsearch 노드 수 있습니다 동일한 컴퓨터에서 험담 라우터 역할을 합니다. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http 코스 수 원점 (Automatic Translation)
 http-cors-allow-origin-help=기원은 HTTP 코스 사용 허용입니다. (Automatic Translation)
 http-cors-configurations=Http 코스 구성 (Automatic Translation)
