--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_nb.properties
@@ -18,7 +18,7 @@ cluster-name=Klyngenavnet (Automatic Translation)
 cluster-name-help=Navnet på klyngen å delta. Navnet skal samsvare med ekstern klyngen når Operasjonsmodus er satt til ekstern. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen Discovery Unicast verter Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Rekke porter skal brukes ved bygging discovery.zen.ping.unicast.hosts verdien. Flere Elasticsearch noder på en rekke porter kan fungere som sladder rutere på samme datamaskin. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http kor tillate opprinnelse (Automatic Translation)
 http-cors-allow-origin-help=Opprinnelse tillate når HTTP kor er aktivert. (Automatic Translation)
 http-cors-configurations=Http kor konfigurasjoner (Automatic Translation)
