--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_pl.properties
@@ -18,7 +18,7 @@ cluster-name=Nazwa klastra (Automatic Translation)
 cluster-name-help=Nazwa klastra, do przyłączenia się. Nazwa powinna odpowiadać klaster zdalny, gdy tryb jest ustawiony do zdalnego. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen Discovery emisji pojedynczej hosty Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Zakres portów, aby użyć podczas tworzenia wartość discovery.zen.ping.unicast.hosts. Wiele węzłów Elasticsearch na zakres portów może działać jako routery plotek na tym samym komputerze. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS umożliwia pochodzenia (Automatic Translation)
 http-cors-allow-origin-help=Początki aby umożliwić włączenie HTTP CORS. (Automatic Translation)
 http-cors-configurations=Konfiguracje protokołu HTTP CORS (Automatic Translation)
