--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_pt_BR.properties
@@ -18,7 +18,7 @@ cluster-name=Nome do cluster
 cluster-name-help=O nome do cluster a se juntar. O nome deve coincidir com o cluster remoto quando o Modo de Operação for definido para remoto.
 discovery-zen-ping-unicast-hosts-port=Porta de hosts unicast do Zen Discovery
 discovery-zen-ping-unicast-hosts-port-help=Alcance das portas a serem utilizadas ao construir o valor do discovery.zen.ping.unicast.hosts. Vários nós Elasticsearch em um alcance de postas podem agir como roteadores de gossip no mesmo computador.
-elasticsearch6-configuration-name=Elasticsearch 6
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS permite origem
 http-cors-allow-origin-help=Origens a serem permitidas quando HTTP CORS é ativado.
 http-cors-configurations=Configurações do Http CORS
