--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_ro.properties
@@ -18,7 +18,7 @@ cluster-name=Nume grup (Automatic Translation)
 cluster-name-help=Numele de cluster să se alăture. Numele trebuie să corespundă cluster la distanţă atunci când modul de operare este situat la distanţă. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen descoperirea Unicast gazdele Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Gama de porturi pentru a utiliza atunci când valoarea discovery.zen.ping.unicast.hosts de constructii. Mai multe noduri Elasticsearch pe o gamă largă de porturi poate acţiona ca bârfă routere la acelaşi computer. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS permite origine (Automatic Translation)
 http-cors-allow-origin-help=Originile pentru a permite activarea HTTP CORS. (Automatic Translation)
 http-cors-configurations=Http CORS configuraţii (Automatic Translation)
