--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_sk.properties
@@ -18,7 +18,7 @@ cluster-name=Hviezdokopa názov (Automatic Translation)
 cluster-name-help=Názov klastra sa pripojiť. Názov by mal zodpovedať vzdialený klaster, keď prevádzkový režim je nastavený na diaľku. (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=Zen objav Unicast hostitelia Port (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=Rozsah portov použiť pri stavbe discovery.zen.ping.unicast.hosts hodnotu. Viacerými Elasticsearch uzlami na určitý rozsah portov vystupova ako smerovaèe gossip v tom istom počítači. (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http Corsa umožňujú pôvodu (Automatic Translation)
 http-cors-allow-origin-help=Počiatky povoliť, keď je zapnuté HTTP Corsa. (Automatic Translation)
 http-cors-configurations=Corsa http konfigurácie (Automatic Translation)
