--- a/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-search-elasticsearch7/portal-search-elasticsearch7-api/src/main/resources/content/Language_th.properties
@@ -18,7 +18,7 @@ cluster-name=ชื่อของคลัสเตอร์ (Automatic Transla
 cluster-name-help=ชื่อของคลัสเตอร์เข้าร่วม ชื่อควรตรงกับคลัสเตอร์ระยะไกลเมื่อตั้งโหมดการทำงานระยะไกลถึง (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port=เซนค้นพบ Unicast โฮสต์พอร์ต (Automatic Translation)
 discovery-zen-ping-unicast-hosts-port-help=ช่วงของพอร์ตที่จะใช้เมื่อสร้างค่า discovery.zen.ping.unicast.hosts หลายโหน Elasticsearch บนช่วงพอร์ตสามารถทำหน้าที่เป็นเราเตอร์ซุบซิบที่คอมพิวเตอร์เครื่องเดียวกัน (Automatic Translation)
-elasticsearch6-configuration-name=Elasticsearch 6 (Automatic Translation)
+elasticsearch7-configuration-name=Elasticsearch 7 (Automatic Copy)
 http-cors-allow-origin=Http CORS ให้กำเนิด (Automatic Translation)
 http-cors-allow-origin-help=กำเนิดให้เมื่อเปิดใช้งาน HTTP CORS (Automatic Translation)
 http-cors-configurations=กำหนดค่า http CORS (Automatic Translation)
